--- a/themes/sofya/layouts/about/single.html
+++ b/themes/sofya/layouts/about/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 <main>
 <section class="about">
-  <img src="{{ .Site.BaseURL }}img/me.jpg" class="profile-photo">
+  <img src="{{ .Site.BaseURL }}img/sijad.jpg" class="profile-photo">
   {{ .Content }}
 </section>
 </main>
