--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,15 +16,13 @@
           <a href="{{ relURL "/" }}">{{ .Site.Title | markdownify }}</a>
         </h1>
         <ul id="social-media">
-          {{ if .Site.Author.github }}
-          <li><a href="https://github.com/{{ .Site.Author.github }}"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a></li>
-          {{ end }}
           {{ range .Site.Languages -}}
           {{ if ne .LanguageName $curLanguageName }}
-          <div class="lang-switch col-xs-3 col-xs-offset-9">
-            <a href="/{{ .Lang }}">{{ .LanguageName }}</a>
-          </div>
+          <li><a href="/{{ .Lang }}">{{ .LanguageName }}</a></li>
           {{ end }}
+          {{ end }}
+          {{ if .Site.Author.github }}
+          <li><a href="https://github.com/{{ .Site.Author.github }}"><img src="{{ "img/github.png" | relURL }}"></i></a></li>
           {{ end }}
         </ul>
         {{ with .Site.Params.tagline }}
