fix image caption

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -287,7 +287,8 @@ a {
 
 figure {
   margin: 0;
-  figcaption p {
+  figcaption h4 {
+    text-align: center;
     margin-top: 0.3em;
     font-size: 0.8em;
     font-style: italic;
