--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,12 +10,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Vazir", serif;
+  font-family: "Vazir", "Open Sans", serif-serif;
   color: #333333;
-}
-
-h1, h2, h3, h4, h5, h6, time {
-  font-family: "Vazir", sans-serif;
 }
 
 #container {
