--- a/layouts/partials/header_includes.html
+++ b/layouts/partials/header_includes.html
@@ -1,2 +1,3 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 {{ $style := resources.Get "css/style.scss" | resources.ToCSS | resources.Minify }}
 <link rel="stylesheet" href="{{ $style.Permalink }}" />
