--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,17 +7,15 @@
     {{ partial "meta" . }}
     {{ partial "header_includes" . -}}
   </head>
-  {{$curLanguageName := .Site.Language.LanguageName }}
-
   <body>
     <div id="container">
       <header>
         <h1>
-          <a href="{{ relURL "/" }}">{{ .Site.Title | markdownify }}</a>
+          <a href="{{ relLangURL "/" }}">{{ .Site.Title | markdownify }}</a>
         </h1>
         <ul id="social-media">
           {{ range .Site.Languages -}}
-          {{ if ne .LanguageName $curLanguageName }}
+          {{ if ne .LanguageName $.Site.Language.LanguageName }}
           <li><a href="/{{ .Lang }}">{{ .LanguageName }}</a></li>
           {{ end }}
           {{ end }}
