--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,10 +3,7 @@
       <h6>© {{ dateFormat "2006" now }} <a href="{{ relURL "/" }}">{{ .Site.Title | markdownify }}</a></h6>
     </footer>
 </div>
-{{ $jalaali := resources.Get "js/jalaali.js" }}
-{{ $main := resources.Get "js/main.js" }}
-{{ $js := slice $jalaali $main | resources.Concat "js/bundle.js" | resources.Minify }}
-<script src="{{ $js.Permalink }}"></script>
+<script src="{{ (slice (resources.Get "js/jalaali.js") (resources.Get "js/main.js") | resources.Concat "js/bundle.js" | resources.Minify).Permalink }}"></script>
 </body>
 
 </html>
