--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,9 @@
 </main>
     <footer>
-      <h6>© {{ dateFormat "2006" now }} <a href="{{ relURL "/" }}">{{ .Site.Title | markdownify }}</a></h6>
+      <h6>
+        © {{ dateFormat "2006" now }} <a href="{{ relURL "/" }}">{{ .Site.Title | markdownify }}</a> |
+        <a href="https://github.com/sijad/hashemian.me">source</a>
+      </h6>
     </footer>
 </div>
 <script src="{{ (slice (resources.Get "js/jalaali.js") (resources.Get "js/main.js") | resources.Concat "js/bundle.js" | resources.Minify).Permalink }}"></script>
