--- a/layouts/partials/header_includes.html
+++ b/layouts/partials/header_includes.html
@@ -1,3 +1,3 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-{{ $style := resources.Get "css/style.scss" | resources.ToCSS | resources.Minify }}
+{{ $style := resources.Get "css/style.scss" | resources.ToCSS (dict "outputStyle" "compressed") }}
 <link rel="stylesheet" href="{{ $style.Permalink }}" />
