--- a/layouts/partials/single_footer.html
+++ b/layouts/partials/single_footer.html
@@ -13,7 +13,5 @@
         {{ end }}
     </ul>
 </section>
-    {{ if .Site.DisqusShortname }}
-        {{ partial "disqus" . }}
-    {{ end }}
+    {{ partial "comments" . }}
 {{ end }}
